--- a/VRChat/96/1037896.html
+++ b/VRChat/96/1037896.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "gxj2muAzJNUrzH0IUofUP4u9lzC2/XQivP15Ln30bn4="></script>
+    "Wqh+zCVBuBqxRt2v4zPu5dBSn4CjDkNfYRUGd4J4sVA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"UnoWeaponSet-001 重装機体風_砲戦支援型パッケージ","description":"\n◆ 解説\n搭載可能重量が多い重装機体向けの装備品パッケージ。\nマテリアル着色で、テクスチャはありません。\n\nオブジェクトで色分けされたシンプルな造形の武器です。\nオマケにシンプルながらデカールもついているので、\nぜひ自分だけのマーキングを楽しんでください。\n\nアニメーションはAnimationだけ組んでいる状態です。\n\n【ポリゴン数】\n\tミサイルランチャー\t△472\n\tレドーム\t\t△470\n\t小型シールド\t\t△418\n\t中型シールド\t\t△494\n\t大型シールド\t\t△570\n\t重装型大型シールド\t△634\n\t汎用装甲\t\t△124\n\t汎用ジョイント\t\t△100\n\n\n◆デザイン時の設定\n\n帰属国家の技術と歴史を古くから支えてきた七重重工にて\n国防プロジェクトの一環として開発された装備品類。\n材料不足の量産コストと剛性の両立のため、\n全体的に直線を中心としたフォルムで構成されている。\nとかそんな感じ。使う時は自分で設定考えていいと思う。\n\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n　　　　利用規約\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n◆ 利用について\n当モデルデータに付属しているデータの改変は自由です。\n本素材に関しては、営利、非営利を問わず\nゲーム、映像作品、動画配信等にご利用いただけます。\n※ Unreal Engine 4, MMD等ソフトウェア問わずご利用いただけます。\n\n◆ 禁止\n公序良俗に反する行為や目的、政治、宗教活動、他者に対する誹謗中傷目的での利用を禁止します。\nまた、当モデルデータに付属しているデータの再配布、販売は改変の有無を問わず禁止します\n\n◆ 免責事項\n当モデルを利用することで発生したトラブルや損失、損害に対して、製作者は一切責任を負いません。当モデルを使用する際は利用者の責任において行ってください。\n\n(c) 2018 unois All Rights Reserved.","url":"https://booth.pm/ja/items/1037896","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c7999e42-deba-47e7-bf43-8f75c3fca7bc/i/1037896/4f770dda-106b-4d23-82b8-adfa4f2466c0_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="gxj2muAzJNUrzH0IUofUP4u9lzC2/XQivP15Ln30bn4="></script>
+    nonce="Wqh+zCVBuBqxRt2v4zPu5dBSn4CjDkNfYRUGd4J4sVA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -444,9 +444,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
