--- a/VRChat/69/1037169.html
+++ b/VRChat/69/1037169.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "cNUe9MSY7Ibj0akxg4hk97sd08/UDygSLncKmPtRHWA="></script>
+    "JosKd6NtiYA05XM79AcB0CoBQjhZB24FXAMBFs426oo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"クロエ","description":"【VRC対応】クロエちゃん Ver.1.1\nVRアバター向けのオリジナル3Dモデルです。\n\nUnityのHumanoid形式に対応。\nUnityパッケージ同梱。\nVRChatにすぐアップロード可能です。\n※揺れ物にDynamicBone(有料)を使用しています。\n\nSketchfabでモデルが閲覧できます。\nhttps://sketchfab.com/models/3918ecefb48d4041a2171444cf138ffa\n------------------------------------------------------\n■同梱データ\n・Chloe_ver1.1.UnityPackage\n・OBJ テクスチャ\n・Readme.txt\n\n■利用規約について\n・再配布不可\n・商用利用不可\n・エロ、グロに該当する表現への利用不可\n・モデル改造可(再配布、商用は不可)\n\n連絡先：https://twitter.com/HiROblueufo\n\n2018/Ver.1.0 販売開始\n2018/11/06 Ver.1.1更新","url":"https://booth.pm/ja/items/1037169","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3800"},"image":"https://booth.pximg.net/c/620x620/f8539628-dba9-41fe-91a7-3c4427c5ffaf/i/1037169/d74505a5-75d7-47ee-a090-2e2012463562_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="cNUe9MSY7Ibj0akxg4hk97sd08/UDygSLncKmPtRHWA="></script>
+    nonce="JosKd6NtiYA05XM79AcB0CoBQjhZB24FXAMBFs426oo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -168,7 +168,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      185
+                                      184
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -184,7 +184,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      185
+                                      184
                                     </div>
                                   </div></a>
                                 </div>
@@ -413,9 +413,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
