--- a/VRChat/06/1036206.html
+++ b/VRChat/06/1036206.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "aeOhNHMfVSyvMCLfJaxQCDTj2Po0Ze2EZnhMAbuvg44="></script>
+    "7G/U/qxSFjfKhEs0CfGE6IgpBCoY/s/My0Z2paYM1UA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"まばたきを自動で直すやつ Ver. 0.1","description":"☆☆☆注意事項☆☆☆\n\n・同じアニメーションに対しては1回しか使えません\nコンポーネントの取替や相対パスの補正を同時に行う仕様上、同じシーン上に同じアバターをいくつも出していた場合、どれか一つにしか利用できません。他のアバターに関しては手動でAnimatorの設定を行う必要があります。\n(そのうちアプデでもう少し柔軟な仕様にしたいです)\n\n・バックアップを取っておいてください\nファイルを直接書き換える処理がありますので、下手するとすでに作成済みのアニメーションが壊れたりする可能性があります。ご注意ください。\n\n・途中で止まった場合は再度実行しないでください\n処理が未完了の場合はお手数ですが残りの作業は手動で行ってください。\n\n・動作保証はありません。\nゲームオブジェクトの構造やアニメーションのパス指定の方法によっては正しく動作しない可能性があります。ご了承ください。\n原理上はまばたき以外のアニメーションにも利用できますが、ファイルの上書き等には十分注意してください。\n\n\n動作確認済みアバター\n・クレリック\n・フェンサー\n\n\n使い方\n上部メニューのHALBYから全自動まばたき修正を選びます。\n顔メッシュを含むオブジェクトと、まばたきのレガシーアニメーションがアタッチされたオブジェクト(アニメーションファイルそのものではありません)をそれぞれ選択して、Applyボタンを押してください。","url":"https://booth.pm/ja/items/1036206","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/64d6cf4e-7b03-4338-9fdc-ca5b8647d504/i/1036206/e20b7cec-0a84-4fcb-9706-6cc2cf74eb0b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aeOhNHMfVSyvMCLfJaxQCDTj2Po0Ze2EZnhMAbuvg44="></script>
+    nonce="7G/U/qxSFjfKhEs0CfGE6IgpBCoY/s/My0Z2paYM1UA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -437,9 +437,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
